# al-verification-bot

./: .gitignore  Cargo.toml  Dockerfile  compose.yml
resources/: query.graphql
src/: account.rs  anilist.rs  database.rs  errors.rs  main.rs  message.rs  verification.rs
src/commands/: account.rs  explanation.rs  link.rs  mod.rs  setup.rs  unlink.rs  verify.rs
src/listener/: button_listener.rs  mod.rs
src/utils/: cooldown.rs  errors.rs  message.rs  mod.rs
