[package]
name = "al-verification-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
rusqlite = { version = "0.35.0", features = ["bundled"] }
graphql_client = { version = "0.14.0", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
custom_error = "1.9.2"
